--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~53.0.22",
@@ -17,7 +18,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
+    "jest": "^30.1.1",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "ts-jest": "^29.4.1",
     "typescript": "~5.8.3"
   },
   "private": true
